--- a/style.css
+++ b/style.css
@@ -872,7 +872,7 @@ body, html {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.065);
     z-index: 2;
     overflow: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
   }
   
   .side-header .navbar-collapse .navbar-nav {
